# game-dat205

./: .gitignore  .syntastic_cpp_config  CMakeLists.txt  README.md  cmake-vs2012.bat  cmake_build.sh  test.cpp
Game/: CMakeLists.txt
Game/assets/data/levels/: maze.json
Game/assets/models/: monkey.dae  test.3ds
Game/assets/shaders/: boneshader.frag  boneshader.vert  simple.vert  simple_shading_texture_skinning.vert  simple_shading_texture_skinning_bones.frag  simple_shading_texture_skinning_bones.vert  simpleshading.frag  simpleshading.vert  staticshader.frag  texture_noshading.frag  texture_noshading.vert
Game/assets/unfinished/: coin.blend  cube.blend  editable-person.3ds  editable-person.blend  editable-person.dae  editable-person.mtl  maze.blend  maze.dae  maze.mtl  skull.blend  skull.dae  tiles.blend  vxl_skull.blend
Game/include/: Debug.h  DynamicGameObject.h  GameObject.h  Level.h  Player.h
Game/src/: DynamicGameObject.cpp  GameObject.cpp  Level.cpp  Main.cpp  ResourceManager.cpp  test.cpp  test2.cpp
RenderEngine/: CMakeLists.txt
RenderEngine/include/: Animation.h  Billboard.h  Environment.h  InputProcessor.h  Light.h  Mesh.h  Model.h  ParticleEmitter.h  RenderEngine.h  ShaderProgram.h  ShadowMap.h  SkinnedModel.h  WindowException.h
RenderEngine/src/: Animation.cpp  Billboard.cpp  Camera.cpp  Environment.cpp  InputProcessor.cpp  Light.cpp  Mesh.cpp  Model.cpp  ParticleEmitter.cpp  Screen.cpp  ShaderProgram.cpp  ShadowMap.cpp  SkinnedModel.cpp  Texture.cpp  Window.cpp  xxxCMakeLists.txt
RenderEngine/src/models/: cube.blend  cube.dae
citrus/: CMakeLists.txt
citrus/include/: Camera.h  DirectionalLight.h  Environment.h  InputProcessor.h  Light.h  Mesh.h  Model.h  ParticleEmitter.h  RenderEngine.h  Room.h  ShaderProgram.h  SkinnedModel.h  StaticModel.h  Texture.h  Window.h
citrus/src/: Animation.cpp  Billboard.cpp  Environment.cpp  Light.cpp  Mesh.cpp  Model.cpp  OBJLoader.cpp  ScreenTest.cpp  ShaderProgram.cpp  ShadowMap.cpp  SkinnedModel.cpp  Texture.cpp
game/: CMakeLists.txt
game/assets/data/gameobjects/: coin.json
game/assets/data/levels/: maze.json
game/assets/models/: monkey.blend  test.dae
game/assets/shaders/: shadowmap.vert  ssao.frag  ssao.vert  staticshader.frag  staticshader.vert
game/assets/unfinished/: coin.blend  coin.mtl  cube.mtl  maze.dae  maze.mtl  maze_col.mtl  skull.dae  test.blend  test.dae  tiles.blend  tiles.mtl  vxl_skull.blend  vxl_skull.dae
game/include/: DynamicGameObject.h  Player.h  ResourceManager.h
game/src/: GameObject.cpp  Main.cpp  Player.cpp  ResourceManager.cpp
include/: Billboard.h  Camera.h  Environment.h  InputProcessor.h  Model.h  ModelInstance.h  OBJLoader.h  Screen.h  ScreenTest.h  ShaderProgram.h  Window.h
src/: Billboard.cpp  CMakeLists.txt  Camera.cpp  Model.cpp  ModelInstance.cpp  OBJLoader.cpp  ShaderException.h  ShaderProgram.cpp  ShadowMap.cpp  Window.cpp  simple.vert  test.cpp
src/shaders/: cube.3ds  cube.blend  cube.dae  cube.mtl  monkey.blend  shadowmap.vert  simple.frag  simple.vert  simpleshading.frag  simpleshading.vert  simpletex.frag  simpletex.vert  test.blend  test.fbx
tools/citrus-editor/: CMakeLists.txt
tools/citrus-editor/src/: Main.cpp
